@@ -1,4 +1,5 @@
 Adminer dev:
+PostgreSQL: Fix export of indexes with expressions (bug #768)
 SQLite: Support CHECK constraint
 SQLite: Add command Check tables
 SQLite: Display all rows of variable values
